[package]
name = "cdn"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-cors = "0.6"
actix-multipart = "0.4"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
sanitize-filename = "0.5"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.9"
dotenv = "0.15"
mime = "0.3"